# d2d-client

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  db_setup.sql  docker-compose.yaml  nginx.conf  package-lock.json  package.json  rustfmt.toml  tailwind.css
assets/js/: main.js
assets/js/home/: auth-modal.js  user-dropdown.js
assets/js/lib/: datastar.js
infra/dev/: Dockerfile  docker-compose.yaml  entrypoint.sh
infra/nginx/: Dockerfile
infra/prod/: Dockerfile  docker-compose.yaml
src/: config.rs  lib.rs  main.rs  postgres.rs  router.rs  tracing.rs
src/controllers/: auth_c.rs  home.rs  home_c.rs  mod.rs  profile_c.rs  section_c.rs
src/middlewares/: auth_mw.rs  csrf_mw.rs  mod.rs
src/models/: error.rs  state.rs  user.rs  user_db.rs
src/utilities/: db.rs  hash.rs  mod.rs  oauth.rs  redirect.rs
src/views/: auth_v.rs  head_v.rs  home.rs  home_v.rs  mod.rs
src/views/pages/: home_v.rs  mod.rs  profile_v.rs
src/views/ui/: auth_v.rs  head_v.rs  mod.rs  nav_v.rs
templates/: home.html  index.html
