[package]
name = "d2d-client"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
askama = "0.13.0"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["cookie", "multipart"] }
axum_csrf = { version = "0.11.0", features = ["layer"] }
chrono = "0.4.40"
clap = { version = "4.5.33", features = ["derive", "env"] }
cookie = "0.18.1"
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
html-escape = "0.2.13"
http-body-util = "0.1.3"
postgres-types = { version = "0.2.9", features = ["derive"] }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tailwind_fuse = "0.3.2"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.13"
tower-http = { version = "0.6.2", features = ["fs", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = 'abort'
