[package]
name = "d2d-client"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie", "multipart"] }
axum_csrf = { version = "0.11.0", features = ["layer"] }
axum_session = { version = "0.16.0" }
axum_session_redispool = { version = "0.6.0" }
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive", "env"] }
cookie = "0.18.1"
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
html-escape = "0.2.13"
http-body-util = "0.1.3"
maud = "0.27.0"
oauth2 = "5.0.0"
postgres-types = { version = "0.2.9", features = ["derive"] }
redis = { version = "0.29.5" }
redis_pool = "0.8.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tailwind_fuse = "0.3.2"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.13"
tower-http = { version = "0.6.2", features = ["fs", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = 'abort'
